added sonar scanner github actions for compilation database

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,12 +6,12 @@
 #
 # ----------------------------------------------------------------------------
 # Disable in-source builds to prevent source tree corruption.
-if(" ${CMAKE_SOURCE_DIR}" STREQUAL " ${CMAKE_BINARY_DIR}")
-  message(FATAL_ERROR "
-FATAL: In-source builds are not allowed.
-       You should create a separate directory for build files.
-")
-endif()
+# if(" ${CMAKE_SOURCE_DIR}" STREQUAL " ${CMAKE_BINARY_DIR}")
+#   message(FATAL_ERROR "
+# FATAL: In-source builds are not allowed.
+#        You should create a separate directory for build files.
+# ")
+# endif()
 
 include(cmake/OpenCVMinDepVersions.cmake)
 
