added java and node dependencies

--- a/.github/workflows/sonar.yaml
+++ b/.github/workflows/sonar.yaml
@@ -19,10 +19,18 @@ jobs:
         env:
           SONAR_HOST_URL: ${{secrets.SONAR_HOST_URL}}
         uses: SonarSource/sonarqube-github-c-cpp@v1
+      - name: Set up JDK 17
+        uses: actions/setup-java@v2
+        with:
+          java-version: '17'
+          distribution: 'temurin'
+      - name: Set up Node.js
+        uses: actions/setup-node@v4
+        with:
+          node-version: '18'
       - name: Run build-wrapper
         run: |
-          cmake -DCMAKE_BUILD_TYPE=Release -DCMAKE_EXPORT_COMPILE_COMMANDS=ON . && \
-          cm
+          cmake -DCMAKE_BUILD_TYPE=Release -DCMAKE_EXPORT_COMPILE_COMMANDS=ON .
       - name: Run sonar-scanner
         env:
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
