removal of XWD dependency

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -306,6 +306,8 @@ OCV_OPTION(WITH_GTK_2_X "Use GTK version 2" OFF
   VERIFY HAVE_GTK AND NOT HAVE_GTK3)
 OCV_OPTION(WITH_FRAMEBUFFER "Include framebuffer support" OFF
   VISIBLE_IF UNIX AND NOT APPLE AND NOT ANDROID)
+OCV_OPTION(WITH_FRAMEBUFFER_XVFB "Include virtual framebuffer support" OFF
+  VISIBLE_IF UNIX AND NOT APPLE AND NOT ANDROID)
 OCV_OPTION(WITH_WAYLAND "Include Wayland support" OFF
         VISIBLE_IF UNIX AND NOT APPLE AND NOT ANDROID
         VERIFY HAVE_WAYLAND)
@@ -1451,7 +1453,7 @@ if(WITH_GTK OR HAVE_GTK)
   endif()
 endif()
 
-if(WITH_FRAMEBUFFER OR HAVE_FRAMEBUFFER)
+if(WITH_FRAMEBUFFER OR HAVE_FRAMEBUFFER OR WITH_FRAMEBUFFER_XVFB OR HAVE_FRAMEBUFFER_XVFB)
   status("    Framebuffer UI:" "YES")
 endif()
 
