--- a/modules/highgui/CMakeLists.txt
+++ b/modules/highgui/CMakeLists.txt
@@ -49,13 +49,30 @@ list(REMOVE_ITEM highgui_ext_hdrs "${CMAKE_CURRENT_LIST_DIR}/include/opencv2/${n
 
 set(OPENCV_HIGHGUI_BUILTIN_BACKEND "")
 
-if(WITH_FRAMEBUFFER)
+if(WITH_FRAMEBUFFER OR WITH_FRAMEBUFFER_XVFB)
   set(OPENCV_HIGHGUI_BUILTIN_BACKEND "FB")
+  if(WITH_FRAMEBUFFER_XVFB)
+    include(CheckCXXSourceCompiles)
+    check_cxx_source_compiles( 
+    "#include <X11/XWDFile.h>
+    #include <X11/X.h>
+
+    int main(void)
+    {
+      XWDFileHeader *xwd_header;
+      XWDColor *xwd_colors;
+      return 0;
+    }"
+    HAVE_XWD_STRUCT)
+    if(HAVE_XWD_STRUCT)
+      add_definitions(-DHAVE_FRAMEBUFFER_XVFB)
+    else()
+      message(FATAL_ERROR "XWD structure not found")
+    endif()
+  endif()
   add_definitions(-DHAVE_FRAMEBUFFER)
   list(APPEND highgui_srcs ${CMAKE_CURRENT_LIST_DIR}/src/window_framebuffer.cpp)
   list(APPEND highgui_hdrs ${CMAKE_CURRENT_LIST_DIR}/src/window_framebuffer.hpp)
-  list(APPEND highgui_hdrs ${CMAKE_CURRENT_LIST_DIR}/src/XWDFile.h)
-  list(APPEND highgui_hdrs ${CMAKE_CURRENT_LIST_DIR}/src/Xmd.h)
 endif()
 
 if(WITH_WAYLAND AND HAVE_WAYLAND)
