fixed CMake files for framebuffer

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1454,7 +1454,18 @@ if(WITH_GTK OR HAVE_GTK)
 endif()
 
 if(WITH_FRAMEBUFFER OR HAVE_FRAMEBUFFER OR WITH_FRAMEBUFFER_XVFB OR HAVE_FRAMEBUFFER_XVFB)
-  status("    Framebuffer UI:" "YES")
+  if(HAVE_FRAMEBUFFER OR HAVE_FRAMEBUFFER_XVFB)
+    if(HAVE_FRAMEBUFFER)
+      status("    Framebuffer UI:" "YES")
+    endif()
+    if(HAVE_FRAMEBUFFER_XVFB)
+      status("    Virtual framebuffer UI:" "YES")
+    else()
+      status("    Virtual framebuffer UI:" "NO")
+    endif()
+  else()
+    status("    Framebuffer UI:" "NO")
+  endif()
 endif()
 
 if(WITH_OPENGL OR HAVE_OPENGL)
