--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1455,14 +1455,8 @@ endif()
 
 if(WITH_FRAMEBUFFER OR HAVE_FRAMEBUFFER OR WITH_FRAMEBUFFER_XVFB OR HAVE_FRAMEBUFFER_XVFB)
   if(HAVE_FRAMEBUFFER OR HAVE_FRAMEBUFFER_XVFB)
-    if(HAVE_FRAMEBUFFER)
-      status("    Framebuffer UI:" "YES")
-    endif()
-    if(HAVE_FRAMEBUFFER_XVFB)
-      status("    Virtual framebuffer UI:" "YES")
-    else()
-      status("    Virtual framebuffer UI:" "NO")
-    endif()
+    status("    Framebuffer UI:" HAVE_FRAMEBUFFER THEN YES ELSE NO)
+    status("    Virtual framebuffer UI:" HAVE_FRAMEBUFFER_XVFB THEN YES ELSE NO)
   else()
     status("    Framebuffer UI:" "NO")
   endif()
