fixed work with framebuffer in cmake

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1453,12 +1453,10 @@ if(WITH_GTK OR HAVE_GTK)
   endif()
 endif()
 
-if(WITH_FRAMEBUFFER OR HAVE_FRAMEBUFFER OR WITH_FRAMEBUFFER_XVFB OR HAVE_FRAMEBUFFER_XVFB)
-  if(HAVE_FRAMEBUFFER OR HAVE_FRAMEBUFFER_XVFB)
-    status("    Framebuffer UI:" HAVE_FRAMEBUFFER THEN YES ELSE NO)
+if(WITH_FRAMEBUFFER OR HAVE_FRAMEBUFFER)
+  status("    Framebuffer UI:" HAVE_FRAMEBUFFER THEN YES ELSE NO)
+  if(WITH_FRAMEBUFFER_XVFB OR HAVE_FRAMEBUFFER_XVFB)
     status("    Virtual framebuffer UI:" HAVE_FRAMEBUFFER_XVFB THEN YES ELSE NO)
-  else()
-    status("    Framebuffer UI:" "NO")
   endif()
 endif()
 
