--- a/modules/highgui/CMakeLists.txt
+++ b/modules/highgui/CMakeLists.txt
@@ -49,10 +49,12 @@ list(REMOVE_ITEM highgui_ext_hdrs "${CMAKE_CURRENT_LIST_DIR}/include/opencv2/${n
 
 set(OPENCV_HIGHGUI_BUILTIN_BACKEND "")
 
-if(WITH_FRAMEBUFFER OR WITH_FRAMEBUFFER_XVFB)
+if(WITH_FRAMEBUFFER)
   set(OPENCV_HIGHGUI_BUILTIN_BACKEND "FB")
-  if(HAVE_FRAMEBUFFER_XVFB)
+  if(WITH_FRAMEBUFFER_XVFB)
+    if(HAVE_FRAMEBUFFER_XVFB)
       add_definitions(-DHAVE_FRAMEBUFFER_XVFB)
+    endif()
   endif()
   if(HAVE_FRAMEBUFFER)
     add_definitions(-DHAVE_FRAMEBUFFER)
