review comments have been corrected

--- a/modules/highgui/CMakeLists.txt
+++ b/modules/highgui/CMakeLists.txt
@@ -49,17 +49,13 @@ list(REMOVE_ITEM highgui_ext_hdrs "${CMAKE_CURRENT_LIST_DIR}/include/opencv2/${n
 
 set(OPENCV_HIGHGUI_BUILTIN_BACKEND "")
 
-if(WITH_FRAMEBUFFER)
+if(WITH_FRAMEBUFFER AND HAVE_FRAMEBUFFER)
   set(OPENCV_HIGHGUI_BUILTIN_BACKEND "FB")
-  if(WITH_FRAMEBUFFER_XVFB)
-    if(HAVE_FRAMEBUFFER_XVFB)
-      add_definitions(-DHAVE_FRAMEBUFFER_XVFB)
-    endif()
-  endif()
-  if(HAVE_FRAMEBUFFER)
-    add_definitions(-DHAVE_FRAMEBUFFER)
-    list(APPEND highgui_srcs ${CMAKE_CURRENT_LIST_DIR}/src/window_framebuffer.cpp)
-    list(APPEND highgui_hdrs ${CMAKE_CURRENT_LIST_DIR}/src/window_framebuffer.hpp)
+  add_definitions(-DHAVE_FRAMEBUFFER)
+  list(APPEND highgui_srcs ${CMAKE_CURRENT_LIST_DIR}/src/window_framebuffer.cpp)
+  list(APPEND highgui_hdrs ${CMAKE_CURRENT_LIST_DIR}/src/window_framebuffer.hpp)
+  if(HAVE_FRAMEBUFFER_XVFB)
+    add_definitions(-DHAVE_FRAMEBUFFER_XVFB)
   endif()
 endif()
 
