--- a/samples/dnn/models.yml
+++ b/samples/dnn/models.yml
@@ -265,3 +265,19 @@ fcnresnet101:
   height: 500
   rgb: false
   sample: "segmentation"
+
+################################################################################
+# Edge Detection models.
+################################################################################
+
+dexined:
+  load_info:
+    url: "https://drive.google.com/file/d/1u_qXqXqaIP_SqdGaq4CbZyjzkZb02XTs/view?usp=sharing"
+    sha1: "da39a3ee5e6b4b0d3255bfef95601890afd80709"
+  model: "dexined.onnx"
+  mean: [103.5, 116.2, 123.6]
+  scale: 1.0
+  width: 512
+  height: 512
+  rgb: false
+  sample: "edge_detection"
